--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@
     transform: scale(1.5);
 }
 .button-hover {
-    background-color: #7be6d0;
+    background-color: #208873;
 }
 
 
@@ -36,6 +36,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
     header {
         margin-top: 2px;
         background-image: url(images/livello-1.jpg);
@@ -233,6 +234,7 @@ body {
         height: 790px;
         background-image: url('images/livello-3.png');
         background-repeat: no-repeat;
+        background-attachment: fixed;
         display: flex;
         .sub {
             margin: auto;
@@ -264,6 +266,7 @@ body {
         height: 396px;
         text-align: center;
         padding: 100px;
+        background-color: #f5f6f7;
         h3 {
             font-size: 20px;
             font-weight: bolder;
@@ -281,14 +284,62 @@ body {
                 font-size: 16px;
             }
             .btn-title {
-                height: 56px;   
+                height: 56px; 
+                &:hover {
+                    @extend .button-hover;
+                }  
             }
-            .btn-icon i{
+            .btn-icon {
                 height: 56px;
                 width: 56px;
-
+                background-color: #208873;
+                i {
+                    font-size: 29px;
+                }
             }
         }
               
+    }
+    footer {
+        padding: 50px 100px;
+        position: relative;
+        .footer-items {
+            text-transform: uppercase;
+            display: inline;
+            a {
+                margin: 10px;
+                font-size: 14px;
+                text-decoration: none;
+                color: black;
+                font-weight: bolder;
+                letter-spacing: 2.1px;
+                &:hover {
+                    color: #16a085;
+                }
+            }
+            span {
+                color: #16a085;
+            }
+        }
+        p {
+            margin: 10px;
+            font-size: 14px;
+            letter-spacing: 2.1px;
+            font-weight: bolder;
+        }
+        .footer-icon {
+            display: inline-block;
+            position: absolute;
+            top: 20%;
+            right: 15%;
+        }
+        p a {
+            text-decoration: none;
+            color: black;
+            &:hover {
+                font-weight: bolder;
+                text-decoration: none;
+            }
+        }
     }
 }
