--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,8 @@ body {
   font-weight: 300; }
   body header {
     margin-top: 2px;
-    background-image: url(images/livello-1.jpg);
+    background-image: url("../images/livello-1.jpg");
     background-size: cover;
-    width: 1280px;
     height: 100vh;
     color: white; }
   body nav ul {
@@ -75,7 +74,6 @@ body {
       font-size: 25px;
       margin: 10px; }
   body main {
-    width: 1280px;
     height: 400px;
     position: relative;
     background-color: #f5f6f7; }
@@ -141,21 +139,23 @@ body {
           font-size: 10px;
           margin-top: 20px; }
       body .community .gallery .gallery-item-2 {
-        background-image: url("images/livello-5.png");
+        background-image: url("../images/livello-5.png");
         height: 244px;
         background-repeat: no-repeat;
         flex: 2; }
       body .community .gallery .gallery-item-3 {
-        background-image: url("images/livello-6.png");
+        background-image: url("../images/livello-6.png");
         height: 244px;
         background-repeat: no-repeat;
         flex: 2; }
   body .subscribe {
     height: 790px;
-    background-image: url("images/livello-3.png");
-    background-repeat: no-repeat;
+    background-image: url("../images/livello-3.png");
+    background-size: cover;
     background-attachment: fixed;
-    display: flex; }
+    display: flex;
+    justify-content: center;
+    align-items: center; }
     body .subscribe .sub {
       margin: auto; }
       body .subscribe .sub h1 {
